# Chat-C

./: CMakeLists.txt  Chat_C.h  Client.c  Messages.c  Messages.h  README.md  Requests.c  Server.c  Server.h  main.c
Client/: Client.c  ClientSend.c  TextProcessing.c
Server/: Clients.c  Commands.c  IpList.c  Requests.c  Send.c  Server.c
headers/: Client.h  Clients.h  Messages.h  Server.h  Types.h
shared/: Messages.c  main.c
